--- a/home.html
+++ b/home.html
@@ -2,11 +2,18 @@
 <html>
 <head>
     <title>My Portfolio</title>
+    <!-- Link the external CSS file -->
+    <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </nav>
     <section>
         <h2>About Me</h2>
         <p>Hello! I'm a beginner developer learning to code.</p>
