--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Portfolio</title>
     <!-- Link the external CSS file -->
-    <link rel="stylesheet" type="text/css" href="home.css">
+    <link rel="stylesheet" type="text/css" href="../home.css">
 </head>
 <body>
     <header>
