--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
     <title>My Portfolio</title>
     <!-- Link the external CSS file -->
-    <link rel="stylesheet" type="text/css" href="..\home.css">
+    <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
